<resources>

    <string name="app_name">SpaceTrader</string>
    <string name="intro_text">Welcome to Space Trader!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_launcher">Launcher</string>
    <string name="button_newGame">New Game</string>
    <string name="button_loadGame">Load Game</string>
    <string name="hello_world">Let\'s setup a game!</string>
    <string name="title_activity_game_setup">GameSetup</string>
    <string name="too_high_error">Remove some skill points! Sum must equal 16 to continue!</string>
    <string name="too_low_error">You still have skill points to allocate! Sum must equal 16 to continue! </string>
    <string name="title_activity_space">Space</string>
    <string name="text_fuel_level">Fuel level: </string>
    <string name="text_current_planet">Currently orbiting: %s</string>
    <string name="button_dock">Dock on planet</string>
    <string name="button_destination">Change destination</string>
    <string name="button_ship">View ship</string>
    <string name="setup_text_pilot">Pilot</string>
    <string name="setup_text_fighter">Fighter</string>
    <string name="setup_text_engineer">Engineer</string>
    <string name="setup_text_trader">Trader</string>
    <string name="setup_input_name">Character Name</string>
    <string name="setup_radio_easy">Easy</string>
    <string name="setup_radio_hard">Hard</string>
    <string name="setup_radio_impossible">Impossible</string>
    <string name="setup_button_submit">Submit!</string>

</resources>