<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/character_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/setup_input_name"
            android:inputType="textPersonName" >

        </EditText>

        <EditText
            android:id="@+id/feedback_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:gravity="fill_horizontal" >

            <TextView
                android:id="@+id/text_pilotLevel"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.80"
                android:ems="8"
                android:gravity="center_horizontal"
                android:text="@string/setup_text_pilot"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_fighterLevel"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="@string/setup_text_fighter"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_traderLevel"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="@string/setup_text_trader"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/text_engineerLevel"
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:text="@string/setup_text_engineer"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" ><NumberPicker
                android:id="@+id/pilotLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <NumberPicker
                android:id="@+id/fighterLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <NumberPicker
                android:id="@+id/traderLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <NumberPicker
                android:id="@+id/engineerLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/setup_radio_easy" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_radio_hard" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_radio_impossible" />
            </RadioGroup>

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkMakePlayer"
                android:text="@string/setup_button_submit" />
        </LinearLayout>

    </LinearLayout>
    
</LinearLayout>