<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Introduction text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/intro_text"
        tools:context=".Launcher" />
    
    <!-- Loadgame button, does nothing atm -->
    <Button android:id="@+id/button_loadGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_loadGame" />

    <!-- Newgame button, starts setupGame Activity -->
    <Button
        android:id="@+id/button_newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_loadGame"
        android:layout_centerHorizontal="true"
        android:text="@string/button_newGame" 
        android:onClick="startGameSetup"/>
    
    <!-- No quit button because apparently it's bad Android design -->

</RelativeLayout>
